--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
         "hanson/vbot": "^2.0",
       "ext-mysql": "*",
       "ext-mysqli": "*"
-    }
+    },
+  "autoload": {
+    "files": [
+      "Medoo.php"
+    ]
+  }
 }
