--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,7 @@
     "require": {
         "hanson/vbot": "^2.0",
       "ext-mysql": "*",
-      "ext-mysqli": "*"
-    },
-  "autoload": {
-    "files": [
-      "Medoo.php"
-    ]
-  }
+      "ext-mysqli": "*",
+      "catfan/Medoo": "*"
+    }
 }
