--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "require": {
         "hanson/vbot": "^2.0",
       "ext-mysql": "*",
-      "ext-mysqli": "*",
-      "catfan/Medoo": "*"
+      "ext-mysqli": "*"
     }
 }
